@@ -1,14 +1,21 @@
 package be.ephec.padel.backend.service;
 
 import be.ephec.padel.backend.common.Tarifs;
-import be.ephec.padel.backend.dto.response.MatchDto;
 import be.ephec.padel.backend.dto.response.MatchDetailDto;
+import be.ephec.padel.backend.dto.response.MatchDto;
+import be.ephec.padel.backend.dto.response.PublicMatchSummaryDto;
 import be.ephec.padel.backend.exception.BusinessException;
 import be.ephec.padel.backend.exception.ForbiddenException;
 import be.ephec.padel.backend.exception.NotFoundException;
-import be.ephec.padel.backend.mapper.MatchMapper;
 import be.ephec.padel.backend.mapper.MatchDetailMapper;
-import be.ephec.padel.backend.model.entities.*;
+import be.ephec.padel.backend.mapper.MatchMapper;
+import be.ephec.padel.backend.mapper.PublicMatchSummaryMapper;
+import be.ephec.padel.backend.model.entities.HoraireSite;
+import be.ephec.padel.backend.model.entities.Joueur;
+import be.ephec.padel.backend.model.entities.MatchPadel;
+import be.ephec.padel.backend.model.entities.Participation;
+import be.ephec.padel.backend.model.entities.Site;
+import be.ephec.padel.backend.model.entities.Terrain;
 import be.ephec.padel.backend.model.enums.MatchVisibilite;
 import be.ephec.padel.backend.model.enums.TypeJoueur;
 import be.ephec.padel.backend.repository.FermetureGlobaleRepository;
@@ -17,18 +24,14 @@ import be.ephec.padel.backend.repository.MatchPadelRepository;
 import be.ephec.padel.backend.repository.PaiementRepository;
 import be.ephec.padel.backend.repository.ParticipationRepository;
 import be.ephec.padel.backend.repository.TerrainRepository;
-import be.ephec.padel.backend.service.FermetureSiteService;
+import be.ephec.padel.backend.repository.projection.PublicMatchSummaryProjection;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import be.ephec.padel.backend.dto.response.PublicMatchSummaryDto;
-import be.ephec.padel.backend.mapper.PublicMatchSummaryMapper;
-import be.ephec.padel.backend.repository.projection.PublicMatchSummaryProjection;
-
-import java.time.LocalDate;
-import java.util.stream.Collectors;
 
 import java.math.BigDecimal;
+import java.time.Clock;
 import java.time.DayOfWeek;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
@@ -37,8 +40,7 @@ import java.util.List;
 @Transactional
 public class MatchPadelService {
 
-    // Valeurs MVP temporaires.
-    // À remplacer par les paramètres de réservation par site/année quand l'issue dédiée sera implémentée.
+
     private static final long DUREE_MATCH_MIN = 90;
     private static final long BUFFER_MIN = 15;
     private static final long SLOT_MIN = DUREE_MATCH_MIN + BUFFER_MIN; // 105
@@ -53,15 +55,19 @@ public class MatchPadelService {
     private final FermetureSiteService fermetureSiteService;
     private final PaiementRepository paiementRepository;
     private final FermetureGlobaleRepository fermetureGlobaleRepository;
+    private final Clock clock;
 
     public MatchPadelService(MatchPadelRepository matchPadelRepository,
                              TerrainRepository terrainRepository,
                              JoueurRepository joueurRepository,
                              SoldeService soldeService,
                              ParticipationRepository participationRepository,
-                             PaiementService paiementService, HoraireSiteService horaireSiteService, FermetureSiteService fermetureSiteService,
+                             PaiementService paiementService,
+                             HoraireSiteService horaireSiteService,
+                             FermetureSiteService fermetureSiteService,
                              PaiementRepository paiementRepository,
-                             FermetureGlobaleRepository fermetureGlobaleRepository) {
+                             FermetureGlobaleRepository fermetureGlobaleRepository,
+                             Clock clock) {
         this.matchPadelRepository = matchPadelRepository;
         this.terrainRepository = terrainRepository;
         this.joueurRepository = joueurRepository;
@@ -69,9 +75,10 @@ public class MatchPadelService {
         this.participationRepository = participationRepository;
         this.paiementService = paiementService;
         this.horaireSiteService = horaireSiteService;
+        this.fermetureSiteService = fermetureSiteService;
         this.paiementRepository = paiementRepository;
         this.fermetureGlobaleRepository = fermetureGlobaleRepository;
-        this.fermetureSiteService = fermetureSiteService;
+        this.clock = clock;
     }
 
     @Transactional(readOnly = true)
@@ -82,10 +89,9 @@ public class MatchPadelService {
 
     @Transactional(readOnly = true)
     public MatchDto getMatchDto(Long id) {
-        MatchPadel m = getMatch(id);
+        MatchPadel match = getMatch(id);
 
         BigDecimal montantTotal = Tarifs.PRIX_MATCH;
-
         BigDecimal montantPaye = paiementRepository.sumMontantByMatchId(id);
         if (montantPaye == null) {
             montantPaye = BigDecimal.ZERO;
@@ -96,12 +102,12 @@ public class MatchPadelService {
             resteAPayer = BigDecimal.ZERO;
         }
 
-        return MatchMapper.toDtoComplet(m, montantTotal, montantPaye, resteAPayer);
+        return MatchMapper.toDtoComplet(match, montantTotal, montantPaye, resteAPayer);
     }
 
     private void verifierFermetureGlobale(LocalDateTime dateDebut) {
         if (dateDebut == null) {
-            throw new BusinessException("Date début obligatoire");
+            throw new BusinessException("Date de début obligatoire");
         }
         if (fermetureGlobaleRepository.existsByDate(dateDebut.toLocalDate())) {
             throw new BusinessException("Réservation impossible : fermeture globale (jour férié).");
@@ -114,7 +120,6 @@ public class MatchPadelService {
         }
 
         Site site = terrain.getSite();
-
         DayOfWeek jour = dateDebut.getDayOfWeek();
         if (site.getJoursFermeture().contains(jour)) {
             throw new BusinessException("Réservation impossible : site fermé ce jour-là.");
@@ -124,7 +129,6 @@ public class MatchPadelService {
 
         LocalTime ouverture = horaire.getHeureOuverture();
         LocalTime fermeture = horaire.getHeureFermeture();
-
         LocalTime start = dateDebut.toLocalTime();
         LocalTime end = dateDebut.plusMinutes(SLOT_MIN).toLocalTime();
 
@@ -155,7 +159,7 @@ public class MatchPadelService {
             throw new BusinessException("Visibilité obligatoire");
         }
 
-        LocalDateTime now = LocalDateTime.now();
+        LocalDateTime now = LocalDateTime.now(clock);
         if (!dateDebut.isAfter(now)) {
             throw new BusinessException("La date du match doit être dans le futur.");
         }
@@ -170,6 +174,14 @@ public class MatchPadelService {
             throw new BusinessException("Réservation impossible : dette en cours (" + organisateur.getSolde() + ").");
         }
 
+        if (organisateur.getPenaliteJusqua() != null && organisateur.getPenaliteJusqua().isAfter(now)) {
+            throw new BusinessException(
+                    "Réservation impossible : pénalité activé jusqu'au "
+                            + organisateur.getPenaliteJusqua().toLocalDate()
+                            + " inclus."
+            );
+        }
+
         verifierDroitReservation(organisateur, terrain, dateDebut, now);
         verifierFermetureGlobale(dateDebut);
         verifierOuvertureSite(terrain, dateDebut);
@@ -179,11 +191,11 @@ public class MatchPadelService {
         MatchPadel match = new MatchPadel(terrain, organisateur, dateDebut, visibilite);
         MatchPadel saved = matchPadelRepository.save(match);
 
-        Participation pOrg = participationRepository.save(new Participation(saved, organisateur));
+        Participation participationOrganisateur = participationRepository.save(new Participation(saved, organisateur));
 
         BigDecimal part = Tarifs.PART_PAR_JOUEUR;
         soldeService.debiter(organisateurMatricule, part);
-        paiementService.payerParticipation(pOrg.getId(), part);
+        paiementService.payerParticipation(participationOrganisateur.getId(), part);
 
         return saved;
     }
@@ -193,7 +205,7 @@ public class MatchPadelService {
             throw new BusinessException("Terrain obligatoire");
         }
         if (newStart == null) {
-            throw new BusinessException("Date début obligatoire");
+            throw new BusinessException("Date de début obligatoire");
         }
 
         LocalDateTime from = newStart.minusMinutes(SLOT_MIN);
@@ -211,8 +223,8 @@ public class MatchPadelService {
             }
 
             LocalDateTime existingEndBuffer = existingStart.plusMinutes(SLOT_MIN);
-
             boolean overlap = existingStart.isBefore(newEndBuffer) && newStart.isBefore(existingEndBuffer);
+
             if (overlap) {
                 throw new BusinessException(
                         "Terrain indisponible : un match est déjà prévu sur ce terrain (1h30 + 15 minutes de battement)."
@@ -221,11 +233,11 @@ public class MatchPadelService {
         }
     }
 
-    private void verifierDroitReservation(Joueur orga,
+    private void verifierDroitReservation(Joueur organisateur,
                                           Terrain terrain,
                                           LocalDateTime dateDebut,
                                           LocalDateTime now) {
-        TypeJoueur type = orga.getType();
+        TypeJoueur type = organisateur.getType();
         if (type == null) {
             throw new BusinessException("Type joueur manquant.");
         }
@@ -240,16 +252,15 @@ public class MatchPadelService {
                 if (dateDebut.isAfter(now.plusWeeks(2))) {
                     throw new BusinessException("Un membre SITE peut réserver au maximum 2 semaines à l'avance.");
                 }
-                if (orga.getSite() == null) {
+                if (organisateur.getSite() == null) {
                     throw new BusinessException("Joueur SITE sans site associé.");
                 }
                 if (terrain.getSite() == null) {
                     throw new BusinessException("Terrain sans site associé.");
                 }
 
-                Long siteJoueur = orga.getSite().getId();
+                Long siteJoueur = organisateur.getSite().getId();
                 Long siteTerrain = terrain.getSite().getId();
-
                 if (!siteJoueur.equals(siteTerrain)) {
                     throw new BusinessException("Un membre SITE ne peut réserver que sur son site.");
                 }
@@ -262,12 +273,13 @@ public class MatchPadelService {
             default -> throw new BusinessException("Type joueur inconnu.");
         }
     }
+
     private void verifierFermetureSite(Terrain terrain, LocalDateTime dateDebut) {
         if (terrain == null || terrain.getSite() == null || terrain.getSite().getId() == null) {
             throw new BusinessException("Terrain sans site associé.");
         }
         if (dateDebut == null) {
-            throw new BusinessException("Date début obligatoire");
+            throw new BusinessException("Date de début obligatoire");
         }
 
         Long siteId = terrain.getSite().getId();
@@ -288,7 +300,7 @@ public class MatchPadelService {
 
         LocalDateTime fromDateTime = (from != null)
                 ? from.atStartOfDay()
-                : LocalDate.now().atStartOfDay();
+                : LocalDate.now(clock).atStartOfDay();
 
         LocalDateTime toDateTime = (to != null)
                 ? to.atTime(LocalTime.MAX)
@@ -303,8 +315,9 @@ public class MatchPadelService {
 
         return rows.stream()
                 .map(row -> PublicMatchSummaryMapper.toDto(row, Tarifs.PART_PAR_JOUEUR))
-                .collect(Collectors.toList());
+                .toList();
     }
+
     private boolean peutVoirMatchPrive(MatchPadel match, String matricule) {
         if (matricule == null || matricule.isBlank()) {
             return false;
@@ -321,19 +334,19 @@ public class MatchPadelService {
 
         return match.getParticipations().stream()
                 .map(Participation::getJoueur)
-                .filter(j -> j != null && j.getMatricule() != null)
-                .anyMatch(j -> matricule.equals(j.getMatricule()));
+                .filter(joueur -> joueur != null && joueur.getMatricule() != null)
+                .anyMatch(joueur -> matricule.equals(joueur.getMatricule()));
     }
+
     @Transactional(readOnly = true)
     public MatchDetailDto getMatchDetailDto(Long id, String matricule) {
-        MatchPadel m = getMatch(id);
+        MatchPadel match = getMatch(id);
 
-        if (m.getVisibilite() == MatchVisibilite.PRIVE && !peutVoirMatchPrive(m, matricule)) {
+        if (match.getVisibilite() == MatchVisibilite.PRIVE && !peutVoirMatchPrive(match, matricule)) {
             throw new ForbiddenException("Accès refusé à ce match privé.");
         }
 
         BigDecimal montantTotal = Tarifs.PRIX_MATCH;
-
         BigDecimal montantPaye = paiementRepository.sumMontantByMatchId(id);
         if (montantPaye == null) {
             montantPaye = BigDecimal.ZERO;
@@ -344,6 +357,6 @@ public class MatchPadelService {
             resteAPayer = BigDecimal.ZERO;
         }
 
-        return MatchDetailMapper.toDto(m, montantTotal, montantPaye, resteAPayer);
+        return MatchDetailMapper.toDto(match, montantTotal, montantPaye, resteAPayer);
     }
 }
